config/deploy/kube/webfront/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bc-test
  labels:
    app: bc-test
    name: bc-test
spec:
  template:
    metadata:
      labels:
        app: bc-test
        name: bc-test
    spec:
      containers:
        - image: 'gcr.io/hc-public/bc:latest'
          imagePullPolicy: Always
          name: webfront
          ports:
            - containerPort: 8080
              name: http-server
