config/deploy/kube/webfront/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bc-test
  labels:
    app: bc-test
    name: bc-test
spec:
  selector:
    app: bc-test
    name: bc-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
